Add UPDATE command to Rest server Add session processing to Rest server
